Fix flex gap

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,7 +36,6 @@ img.muted:not(:hover) {
 }
 
 .card {
-  margin-top:  2rem;
   background-color: #ffffffa6
 }
 
@@ -51,6 +50,7 @@ img.muted:not(:hover) {
 
 .rowwise {
   display: flex;
+  gap: 1.5rem;
   flex-direction: column;
 }
 
